--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extract-zip",
+  "name": "@counterplay/extract-zip",
   "version": "1.0.3",
   "description": "unzip a zip file into a directory using 100% pure gluten-free organic javascript",
   "main": "index.js",
@@ -11,15 +11,7 @@
   },
   "author": "max ogden",
   "license": "BSD",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:maxogden/extract-zip.git"
-  },
-  "keywords": [
-    "unzip",
-    "zip",
-    "extract"
-  ],
+  "repository": "github:88dots/extract-zip",
   "bugs": {
     "url": "https://github.com/maxogden/extract-zip/issues"
   },
